@@ -29,7 +29,7 @@
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
-				<short>Run xchat-gnome in a terminal?</short>
+				<short>Run XChat-GNOME in a terminal?</short>
 			</locale>
 		</schema>
 
